# Hyperliquid

./: .gitignore  CLAUDE.md  README.md  config.json.example  pyproject.toml
.github/workflows/: ci.yml
docs/: COMMANDS.md  ROADMAP.md
examples/: dca_strategy.yaml  grid_strategy.json
hyper_cli/: account.py  algo.py  backtest.py  client.py  config.py  display.py  feed.py  main.py  market.py  perp.py  responses.py  spot.py  strategies.py  validation.py
tests/: test_safety.py
