[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyper-cli"
version = "0.1.0"
description = "CLI for trading, market data, strategy backtesting, and real-time feeds on Hyperliquid DEX"
requires-python = ">=3.10"
dependencies = [
    "hyperliquid-python-sdk>=0.4.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "shellingham>=1.5.0",
    "PyYAML>=6.0",
]

[project.scripts]
hyper = "hyper_cli.main:app"

[tool.setuptools.packages.find]
include = ["hyper_cli*"]
